<?xml version="1.0" encoding="utf-8"?>
<!--
 Filename: activity_photo_album.xml
 Author: Jack Cole
 Class: CS211D T 7PM - 10PM
 Due: 2017-05-23
 Assignment: Homework 6
-->
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="jack.homework6.PhotoAlbum">

  <LinearLayout
    android:layout_width="368dp"
    android:layout_height="495dp"
    android:gravity="center_horizontal|bottom"
    android:orientation="vertical"
    tools:layout_editor_absoluteY="8dp"
    tools:layout_editor_absoluteX="8dp">

    <ImageView
      android:id="@+id/current_image"
      android:layout_width="wrap_content"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:scaleType="fitCenter"/>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:orientation="horizontal">


      <Button
        android:id="@+id/prev_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/button_padding"
        android:onClick="cycle_photo"
        android:text="@string/prev_button"
        android:textSize="@dimen/button_text_size"/>

      <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="cycle_photo"
        android:text="@string/next_button"
        android:textSize="@dimen/button_text_size"/>
    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:orientation="horizontal"
      >
      <Button
        android:id="@+id/slower_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="change_speed"
        android:text="@string/slow_button"
        android:textSize="@dimen/button_text_size"/>
      <Button
        android:id="@+id/auto_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="toggle_auto_cycle"
        android:text="@string/auto_button"
        android:textSize="@dimen/button_text_size"/>
      <Button
        android:id="@+id/faster_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="change_speed"
        android:text="@string/fast_button"
        android:textSize="@dimen/button_text_size"/>
    </LinearLayout>
  </LinearLayout>

</android.support.constraint.ConstraintLayout>
